<resources>
<!--******************************************************************-->
    <string name="listen_mic">Microphone</string>
    <string name="listen_earback">In-ear monitor</string>
    <string name="listen_mixer">Mixer</string>
    <string name="listen_mixing">Effect</string>
    <string name="listen_end">End</string>
    <string name="listen_applying_now">requesting the seat</string>
    <string name="listen_invite_seat">Move a member to speaker</string>
    <string name="listen_mute_seat">Mute</string>
    <string name="listen_close_seat">Close</string>
    <string name="listen_kickout_seat">Move TA to audience</string>
    <string name="listen_open_seat">Open</string>
    <string name="listen_unmute_seat">Unmute</string>
    <string name="listen_cancel">Cancel</string>
    <string name="listen_sure">OK</string>
    <string name="listen_leave_room">leave room</string>
    <string name="listen_apply_micro_has_arrow">Request to speak(%d)</string>
    <string name="listen_open_seat_success">Seat %d is opened</string>
    <string name="listen_open_seat_fail">Seat %d is opened fail</string>
    <string name="listen_close_seat_tip">Seat %d is closed</string>
    <string name="listen_unmute_seat_success">The seat was unmuted</string>
    <string name="listen_unmute_seat_fail">Failed to unmute</string>
    <string name="listen_mute_seat_fail">Failed to mute</string>
    <string name="listen_deny_seat_apply">%s request was rejected</string>
    <string name="listen_seat_mute_tips">The seat is muted, Unable to speak</string>
    <string name="listen_invite_seat_success">Move %s to speaker</string>
    <string name="listen_kickout_seat_success">Move %s to audience</string>
    <string name="listen_seat_already_taken">Seat is already taken</string>
    <string name="listen_seat_already_closed">The seat is closed</string>
    <string name="listen_seat_submited">Request to speak is submitted. Please wait...</string>
    <string name="listen_apply_canceled">Request to speak was cancelled</string>
    <string name="listen_already_leave_seat">You are moved to audience</string>
    <string name="listen_notify">Notification</string>
    <string name="listen_on_seated_tips">You are moved to Seat %d \n You can speak now \n To leave the seat, click your avatar or the Leave button</string>
    <string name="listen_get_it">Got it</string>
    <string name="listen_request_accepted">Request accepted!</string>
    <string name="listen_unmute_seat_tips">The seat is unmuted \n You can speak now</string>
    <string name="listen_kikout_seat_by_host">removed from the seat</string>
    <string name="listen_request_rejected">Your request was rejected</string>
    <string name="listen_seat_muted">The seat is muted, Unable to speak</string>
    <string name="listen_people_online">%s people online</string>
    <string name="listen_host_close_room">The room is dismissed</string>
    <string name="listen_mic_off">Microphone Off</string>
    <string name="listen_mic_on">Microphone On</string>
    <string name="listen_no_mute_members">No muted members~</string>
    <string name="listen_seat">Seat %d</string>
    <string name="listen_enter_room">Enter Room</string>
    <string name="listen_bgm">effect</string>
    <string name="listen_more">More</string>
    <string name="listen_select_member">Select Member</string>
    <string name="listen_notice_tips">The app is used for demo purpose only. Commercial use is not allowed.</string>
    <string name="listen_notice">Announcement</string>
    <string name="listen_loading_fail">load fail</string>
    <string name="listen_net_error">Net error,try again</string>
    <string name="listen_loading">loading...</string>
    <string name="listen_chat_hint">Have a chat</string>
    <string name="listen_applause">Applause</string>
    <string name="listen_laughter">laughter</string>
    <string name="listen_earback_tip">Plug in the earphones and you can use the in-ear monitor</string>
    <string name="listen_voice">Voice</string>
    <string name="listen_bnacking">Backing</string>
    <string name="listen_capture_volume">Capture volume</string>
    <string name="listen_confirm_to_cancel">Confirm to cancel the request to speak</string>
    <string name="listen_dowmseat">Move to audience</string>
    <string name="listen_net_disconnected">The device gets disconnected</string>
    <string name="listen_host_close_room_success">Room was dismissed</string>




    <string name="listen_end_live_title">Are you sure you want to end the stream?</string>
    <string name="listen_end_live_tips">End the live stream</string>
    <string name="listen_kickout_seat_sure">Remove</string>
    <string name="listen_seat_request_success">Join request approved</string>
    <string name="listen_seat_applied">The seat is being requested. Try to request for another seat.</string>
    <string name="listen_already_on_seat">You are already a speaker</string>
    <string name="listen_operate_fail">Operation failed</string>
    <string name="listen_chat_message_tips">The chat room info is required</string>
    <string name="listen_mixing_play_error">An error occurred while playing the mixing audio.</string>
    <string name="listen_already_seat">You have taken a seat</string>
    <string name="listen_down_seat">You have left a seat</string>

    <string name="listen_start_live_error">Failed to start the audio room</string>
    <string name="listen_join_live_error">The private room is full</string>

    <string name="listen_glow_stick">Glow stick</string>
    <string name="listen_arrange">Arrange</string>
    <string name="listen_sports_car">Sports car</string>
    <string name="listen_rockets">Rockets</string>
    <string name="listen_send_gift">Send gift</string>
    <string name="listen_send">Send</string>
    <string name="listen_coin">coins</string>
    <string name="listen_reward_failed">Reward failed</string>
    <string name="listen_donate">donate</string>
    <string name="listen_count">count</string>
    <string name="listen_song">listen</string>
    <string name="listen_pause">pause</string>
    <string name="listen_play">play</string>
    <string name="listen_next_song">cut song</string>
    <string name="listen_first_seat">seat 1</string>
    <string name="listen_song_loading">loading</string>
    <string name="listen_song_ordered">order song《%s》</string>
    <string name="listen_song_deleted">delete song《%s》</string>
    <string name="listen_song_switched">cut song</string>
    <string name="listen_song_pause">pause song《%s》</string>
    <string name="listen_song_start">is playing song《%s》</string>
</resources>
