<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="12dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_ear_back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen_earback"
        android:textColor="#ff222222"
        android:textSize="14dp"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ear_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/listen_color_999999"
        android:textSize="12dp"
        android:text="@string/listen_earback_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ear_back_text" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ear_back"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:checked="false"
        app:trackTint="@color/color_8f8f8f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_ear_comment"
        app:layout_constraintTop_toTopOf="@id/tv_ear_back_text" />

    <View
        android:id="@+id/view_line"
        app:layout_constraintTop_toBottomOf="@id/tv_ear_comment"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="#ffe6e7eb" />

    <TextView
        android:id="@+id/tv_volume_text"
        android:layout_width="50dp"
        android:text="@string/listen_voice"
        android:gravity="center_vertical"
        android:textColor="#ff222222"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="46dp"/>

    <SeekBar
        android:id="@+id/recording_volume_control"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_volume_text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_volume_text"
        app:layout_constraintStart_toEndOf="@id/tv_volume_text"
        android:layout_weight="1"
        android:max="400"
        android:maxHeight="4dp"
        android:paddingLeft="10dp"
        android:progress="100"
        android:progressDrawable="@drawable/listen_background_music_control_seekbar_bg"
        android:saveEnabled="true"
        android:thumb="@drawable/listen_shape_music_control_seekbar_thumb" />

    <View
        app:layout_constraintTop_toBottomOf="@id/tv_volume_text"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffe6e7eb" />

    <TextView
        android:id="@+id/tv_mixer"
        android:layout_width="50dp"
        android:text="@string/listen_bnacking"
        android:gravity="center_vertical"
        android:textColor="#ff222222"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@id/tv_volume_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="46dp" />

    <SeekBar
        android:id="@+id/sb_mixer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_mixer"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mixer"
        app:layout_constraintStart_toEndOf="@id/tv_mixer"
        android:layout_weight="1"
        android:max="100"
        android:maxHeight="4dp"
        android:paddingLeft="10dp"
        android:progress="50"
        android:progressDrawable="@drawable/listen_background_music_control_seekbar_bg"
        android:saveEnabled="true"
        android:thumb="@drawable/listen_shape_music_control_seekbar_thumb" />

</androidx.constraintlayout.widget.ConstraintLayout>